# tree-decomposition

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/logs/: session-20260704-b6ecdf9a.md
configs/suites/: milestone2_synthetic.yaml
docs/milestone-0/: README.md  related-work-map.md  supported-fragment.md  technical-decisions.md  theorem-draft.md
docs/superpowers/plans/: 2026-07-03-milestone-1-prototype.md
results/milestone2/: amortization.jsonl  amortization_summary.json  locality_sweep.jsonl
src/: cli.py
src/experiments/: __init__.py  metrics.py  plotting.py
src/fdr/: __init__.py  simulator.py  task.py
src/graph/: __init__.py  bag_assignment.py  decomposition.py  interaction_graph.py
src/repair/: __init__.py  baselines.py  disruption.py  full_replan.py  localized_repair.py
src/summaries/: __init__.py  cache.py  compose.py  interface.py  invalidation.py  local_solver.py  preprocess.py
tests/differential/: test_localized_vs_full_replan.py
tests/fixtures/: three_room_hub.py  two_room_basic.py  two_room_deeper.py
tests/integration/: test_milestone2_exit_criterion.py
tests/property/: test_cache_correctness.py
tests/unit/: test_bag_assignment.py  test_cache.py  test_chain_generator.py  test_compose.py  test_decomposition.py  test_disruption.py  test_full_replan.py  test_hub_generator.py  test_interaction_graph.py  test_interface.py  test_invalidation.py  test_local_solver.py  test_localized_repair.py  test_simulator.py  test_task.py  test_three_room_hub_fixture.py  test_two_room_basic_fixture.py  test_two_room_deeper_fixture.py
(+8 files in other folders)
