[project]
name = "tree-decomposition"
version = "0.1.0"
description = "InterfaceCache: tree-decomposition summaries for fast local plan repair"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
